# sp1-patricia-trie

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  run_demo.sh
lib/: Cargo.toml
lib/src/: builder.rs  lib.rs  mpt.rs  path.rs  rlp_encoding.rs  types.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
simpleStorage/src/: SimpleStorage.sol
