[package]
name = "mpt-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
sha3 = { version = "0.10", default-features = false }
rlp = { version = "0.5", default-features = false }
