[package]
version = "0.1.0"
name = "mpt-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = "5.0.8"
mpt-lib = { path = "../lib" }
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
sha3 = { version = "0.10", default-features = false }
rlp = { version = "0.5", default-features = false }
